# TransCrypt

./: .gitignore  README.md  db_util.py  main.py  pyproject.toml  setup.py  textual.css  tui.py  util.py
src/: __main__.py  cli.py  crypt_statics.py  db_util.py  i18n.py  tui.py  util.py
src/assets/: dataset_bias.json  i18n.json  textual.css  textual.tcss
tests/: test_db.py
