[project]
name = "burnoutdv-transcrypt"
version = "0.2"
authors = [
  { name="BurnoutDV", email="development@burnoutdv.com" },
]
description = "A bunch of scripts to use PyAnnotate and Whisper to transcribe meeting notes and similar stuff"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=1.13.1",
    "openai-whisper>=1.1.10",
    "textual>=0.19.1",
    "pydub>=0.25.1",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "License :: GPLv3",
    "License :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: German",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: System :: Archiving",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Terminals",
    "Topic :: Utilities"
]
